--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "@angular/platform-browser": "5.2.10",
     "@angular/platform-browser-dynamic": "5.2.10",
     "@ionic-native/core": "4.7.0",
-    "@ionic-native/screenshot": "4.7.0",
     "@ionic-native/gyroscope": "^4.8.0",
+    "@ionic-native/screenshot": "^4.7.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
-    "com.darktalker.cordova.screenshot": "^0.1.6",
     "bezier-js": "^2.2.8",
+    "com.darktalker.cordova.screenshot": "^0.1.6",
     "cordova-android": "7.0.0",
     "cordova-ios": "4.5.4",
     "cordova-plugin-device": "^2.0.2",
@@ -44,6 +44,7 @@
     "opentype.js": "^0.9.0",
     "paper": "^0.11.5",
     "rxjs": "5.5.11",
+    "shortid": "^2.2.8",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
