--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "@ionic-native/base64-to-gallery": "^4.9.1",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/gyroscope": "^4.8.0",
-    "@ionic-native/screenshot": "^4.7.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
+    "@ionic-native/toast": "^4.9.1",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
     "bezier-js": "^2.2.8",
@@ -40,6 +40,7 @@
     "cordova-plugin-ionic-webview": "^1.1.19",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-toast": "^2.6.2",
     "hoek": "^5.0.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -65,7 +66,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "com.darktalker.cordova.screenshot": {},
       "cordova-plugin-gyroscope": {},
-      "cordova-base64-to-gallery": {}
+      "cordova-base64-to-gallery": {},
+      "cordova-plugin-x-toast": {}
     },
     "platforms": [
       "ios",
