--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "makerjs": "^0.9.93",
+    "ngx-bootstrap": "^3.0.1",
     "opentype.js": "^0.9.0",
     "paper": "^0.11.5",
     "rxjs": "5.5.11",
